Added dino images

--- a/dinopays.web/dinopays.web/Views/Shared/_Layout.cshtml
+++ b/dinopays.web/dinopays.web/Views/Shared/_Layout.cshtml
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - dinopays.web</title>
     <base href="~/" />
+
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
 
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <environment exclude="Development">
