--- a/dinopays.web/dinopays.web/Views/Shared/_Layout.cshtml
+++ b/dinopays.web/dinopays.web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <base href="~/" />
 
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <environment exclude="Development">
